--- a/templates/telegraf.conf.j2
+++ b/templates/telegraf.conf.j2
@@ -20,7 +20,7 @@
   # rack = "1a"
   ## Environment variables can be used as tags, and throughout the config file
   # user = "$USER"
-{% if telegraf_tags is defined %}
+{% if telegraf_tags is defined and telegraf_tags != None %}
 {% for key, value in telegraf_tags.iteritems() %}
     {{ key }} = "{{ value }}"
 {% endfor %}
@@ -83,7 +83,7 @@
   # urls = ["udp://localhost:8089"] # UDP endpoint example
   #urls = ["http://localhost:8086"] # required
   {% if telegraf_outputs_influxdb_urls is defined %}
-  urls = [{{ telegraf_outputs_influxdb_urls | join(",") }}]
+  urls = ["{{ telegraf_outputs_influxdb_urls | join(",") }}"]
   {% endif %}
   ## The target database for metrics (telegraf will create it if not exists).
   database = "{{ telegraf_outputs_influxdb_database }}" # required
@@ -424,7 +424,7 @@
   ## Comment this line if you want the raw CPU time metrics
   #fielddrop = ["time_*"]
   {% if telegraf_inputs_cpu_fielddrop is defined %}
-  fielddrop = [{{ telegraf_inputs_cpu_fielddrop | join(",") }}]
+  fielddrop = ["{{ telegraf_inputs_cpu_fielddrop | join(",") }}"]
   {% endif %}
 
 
@@ -438,7 +438,7 @@
   ## present on /run, /var/run, /dev/shm or /dev).
   #ignore_fs = ["tmpfs", "devtmpfs"]
   {% if telegraf_inputs_disk_ignore_fs is defined %}
-  ignore_fs = [{{ telegraf_inputs_disk_ignore_fs | join(",") }}]
+  ignore_fs = ["{{ telegraf_inputs_disk_ignore_fs | join(",") }}"]
   {% endif %}
 
 
